ProyectoDjango/ClansOfWeb/analizador_lexico_sintactico/css/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> doc
Rule 1     doc -> styles
Rule 2     styles -> empty
Rule 3     styles -> styles style
Rule 4     style -> selectors BRACKET_INITIAL rules BRACKET_FINISH
Rule 5     rules -> empty
Rule 6     rules -> rules rule
Rule 7     rule -> MARGIN directions VALUE
Rule 8     rule -> BORDER DASH COLOR VALUE
Rule 9     rule -> BORDER DASH WIDTH VALUE
Rule 10    rule -> FONT DASH SIZE VALUE
Rule 11    rule -> FONT DASH COLOR VALUE
Rule 12    rule -> PADDING directions VALUE
Rule 13    rule -> HEIGHT VALUE
Rule 14    rule -> WIDTH VALUE
Rule 15    rule -> BACKGROUND VALUE
Rule 16    rule -> COLUMNS VALUE
Rule 17    selectors -> selector
Rule 18    selectors -> selectors COMA selector
Rule 19    selector -> selector_universal
Rule 20    selector -> selector_type
Rule 21    selector -> selector_attribute
Rule 22    selector -> selector_class
Rule 23    selector -> selector_id
Rule 24    selector_universal -> ASTERISK
Rule 25    selector_type -> type
Rule 26    selector_type -> type GREATER_THAN type
Rule 27    selector_attribute -> CURLY_INITIAL attribute CURLY_FINISH
Rule 28    selector_attribute -> CURLY_INITIAL attribute EQUAL_TEXT CURLY_FINISH
Rule 29    selector_attribute -> type CURLY_INITIAL attribute CURLY_FINISH
Rule 30    selector_attribute -> type CURLY_INITIAL attribute EQUAL_TEXT CURLY_FINISH
Rule 31    selector_class -> POINT_TEXT
Rule 32    selector_class -> type POINT_TEXT
Rule 33    selector_id -> HASHTAG_TEXT
Rule 34    directions -> empty
Rule 35    directions -> DASH TOP
Rule 36    directions -> DASH BOTTOM
Rule 37    directions -> DASH LEFT
Rule 38    directions -> DASH RIGHT
Rule 39    id -> ID
Rule 40    class -> CLASS
Rule 41    href -> HREF
Rule 42    src -> SRC
Rule 43    lang -> LANG
Rule 44    html -> HTML
Rule 45    head -> HEAD
Rule 46    body -> BODY
Rule 47    section -> SECTION
Rule 48    aside -> ASIDE
Rule 49    article -> ARTICLE
Rule 50    nav -> NAV
Rule 51    ul -> UL
Rule 52    ol -> OL
Rule 53    footer -> FOOTER
Rule 54    header -> HEADER
Rule 55    table -> TABLE
Rule 56    tr -> TR
Rule 57    link -> LINK
Rule 58    p -> P
Rule 59    h -> H
Rule 60    li -> LI
Rule 61    img -> IMG
Rule 62    a -> A
Rule 63    th -> TH
Rule 64    td -> TD
Rule 65    caption -> CAPTION
Rule 66    empty -> <empty>
Rule 67    type -> html
Rule 68    type -> body
Rule 69    type -> head
Rule 70    type -> section
Rule 71    type -> aside
Rule 72    type -> article
Rule 73    type -> nav
Rule 74    type -> ul
Rule 75    type -> ol
Rule 76    type -> footer
Rule 77    type -> header
Rule 78    type -> table
Rule 79    type -> p
Rule 80    type -> h
Rule 81    type -> img
Rule 82    type -> a
Rule 83    type -> TITLE
Rule 84    type -> link
Rule 85    type -> th
Rule 86    type -> td
Rule 87    type -> tr
Rule 88    type -> caption
Rule 89    type -> li
Rule 90    attribute -> id
Rule 91    attribute -> class
Rule 92    attribute -> href
Rule 93    attribute -> src
Rule 94    attribute -> TITLE
Rule 95    attribute -> lang

Terminals, with rules where they appear

A                    : 62
ARTICLE              : 49
ASIDE                : 48
ASTERISK             : 24
BACKGROUND           : 15
BODY                 : 46
BORDER               : 8 9
BOTTOM               : 36
BRACKET_FINISH       : 4
BRACKET_INITIAL      : 4
CAPTION              : 65
CLASS                : 40
COLOR                : 8 11
COLUMNS              : 16
COMA                 : 18
CURLY_FINISH         : 27 28 29 30
CURLY_INITIAL        : 27 28 29 30
DASH                 : 8 9 10 11 35 36 37 38
EQUAL_TEXT           : 28 30
FONT                 : 10 11
FOOTER               : 53
GREATER_THAN         : 26
H                    : 59
HASHTAG_TEXT         : 33
HEAD                 : 45
HEADER               : 54
HEIGHT               : 13
HREF                 : 41
HTML                 : 44
ID                   : 39
IMG                  : 61
LANG                 : 43
LEFT                 : 37
LI                   : 60
LINK                 : 57
MARGIN               : 7
NAV                  : 50
OL                   : 52
P                    : 58
PADDING              : 12
POINT_TEXT           : 31 32
RIGHT                : 38
SECTION              : 47
SIZE                 : 10
SRC                  : 42
TABLE                : 55
TD                   : 64
TH                   : 63
TITLE                : 83 94
TOP                  : 35
TR                   : 56
UL                   : 51
VALUE                : 7 8 9 10 11 12 13 14 15 16
WIDTH                : 9 14
error                : 

Nonterminals, with rules where they appear

a                    : 82
article              : 72
aside                : 71
attribute            : 27 28 29 30
body                 : 68
caption              : 88
class                : 91
directions           : 7 12
doc                  : 0
empty                : 2 5 34
footer               : 76
h                    : 80
head                 : 69
header               : 77
href                 : 92
html                 : 67
id                   : 90
img                  : 81
lang                 : 95
li                   : 89
link                 : 84
nav                  : 73
ol                   : 75
p                    : 79
rule                 : 6
rules                : 4 6
section              : 70
selector             : 17 18
selector_attribute   : 21
selector_class       : 22
selector_id          : 23
selector_type        : 20
selector_universal   : 19
selectors            : 4 18
src                  : 93
style                : 3
styles               : 1 3
table                : 78
td                   : 86
th                   : 85
tr                   : 87
type                 : 25 26 26 29 30 32
ul                   : 74

Parsing method: LALR

state 0

    (0) S' -> . doc
    (1) doc -> . styles
    (2) styles -> . empty
    (3) styles -> . styles style
    (66) empty -> .

    ASTERISK        reduce using rule 66 (empty -> .)
    CURLY_INITIAL   reduce using rule 66 (empty -> .)
    POINT_TEXT      reduce using rule 66 (empty -> .)
    HASHTAG_TEXT    reduce using rule 66 (empty -> .)
    TITLE           reduce using rule 66 (empty -> .)
    HTML            reduce using rule 66 (empty -> .)
    BODY            reduce using rule 66 (empty -> .)
    HEAD            reduce using rule 66 (empty -> .)
    SECTION         reduce using rule 66 (empty -> .)
    ASIDE           reduce using rule 66 (empty -> .)
    ARTICLE         reduce using rule 66 (empty -> .)
    NAV             reduce using rule 66 (empty -> .)
    UL              reduce using rule 66 (empty -> .)
    OL              reduce using rule 66 (empty -> .)
    FOOTER          reduce using rule 66 (empty -> .)
    HEADER          reduce using rule 66 (empty -> .)
    TABLE           reduce using rule 66 (empty -> .)
    P               reduce using rule 66 (empty -> .)
    H               reduce using rule 66 (empty -> .)
    IMG             reduce using rule 66 (empty -> .)
    A               reduce using rule 66 (empty -> .)
    LINK            reduce using rule 66 (empty -> .)
    TH              reduce using rule 66 (empty -> .)
    TD              reduce using rule 66 (empty -> .)
    TR              reduce using rule 66 (empty -> .)
    CAPTION         reduce using rule 66 (empty -> .)
    LI              reduce using rule 66 (empty -> .)
    $end            reduce using rule 66 (empty -> .)

    doc                            shift and go to state 1
    styles                         shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> doc .



state 2

    (1) doc -> styles .
    (3) styles -> styles . style
    (4) style -> . selectors BRACKET_INITIAL rules BRACKET_FINISH
    (17) selectors -> . selector
    (18) selectors -> . selectors COMA selector
    (19) selector -> . selector_universal
    (20) selector -> . selector_type
    (21) selector -> . selector_attribute
    (22) selector -> . selector_class
    (23) selector -> . selector_id
    (24) selector_universal -> . ASTERISK
    (25) selector_type -> . type
    (26) selector_type -> . type GREATER_THAN type
    (27) selector_attribute -> . CURLY_INITIAL attribute CURLY_FINISH
    (28) selector_attribute -> . CURLY_INITIAL attribute EQUAL_TEXT CURLY_FINISH
    (29) selector_attribute -> . type CURLY_INITIAL attribute CURLY_FINISH
    (30) selector_attribute -> . type CURLY_INITIAL attribute EQUAL_TEXT CURLY_FINISH
    (31) selector_class -> . POINT_TEXT
    (32) selector_class -> . type POINT_TEXT
    (33) selector_id -> . HASHTAG_TEXT
    (67) type -> . html
    (68) type -> . body
    (69) type -> . head
    (70) type -> . section
    (71) type -> . aside
    (72) type -> . article
    (73) type -> . nav
    (74) type -> . ul
    (75) type -> . ol
    (76) type -> . footer
    (77) type -> . header
    (78) type -> . table
    (79) type -> . p
    (80) type -> . h
    (81) type -> . img
    (82) type -> . a
    (83) type -> . TITLE
    (84) type -> . link
    (85) type -> . th
    (86) type -> . td
    (87) type -> . tr
    (88) type -> . caption
    (89) type -> . li
    (44) html -> . HTML
    (46) body -> . BODY
    (45) head -> . HEAD
    (47) section -> . SECTION
    (48) aside -> . ASIDE
    (49) article -> . ARTICLE
    (50) nav -> . NAV
    (51) ul -> . UL
    (52) ol -> . OL
    (53) footer -> . FOOTER
    (54) header -> . HEADER
    (55) table -> . TABLE
    (58) p -> . P
    (59) h -> . H
    (61) img -> . IMG
    (62) a -> . A
    (57) link -> . LINK
    (63) th -> . TH
    (64) td -> . TD
    (56) tr -> . TR
    (65) caption -> . CAPTION
    (60) li -> . LI

    $end            reduce using rule 1 (doc -> styles .)
    ASTERISK        shift and go to state 12
    CURLY_INITIAL   shift and go to state 14
    POINT_TEXT      shift and go to state 15
    HASHTAG_TEXT    shift and go to state 16
    TITLE           shift and go to state 33
    HTML            shift and go to state 40
    BODY            shift and go to state 41
    HEAD            shift and go to state 42
    SECTION         shift and go to state 43
    ASIDE           shift and go to state 44
    ARTICLE         shift and go to state 45
    NAV             shift and go to state 46
    UL              shift and go to state 47
    OL              shift and go to state 48
    FOOTER          shift and go to state 49
    HEADER          shift and go to state 50
    TABLE           shift and go to state 51
    P               shift and go to state 52
    H               shift and go to state 53
    IMG             shift and go to state 54
    A               shift and go to state 55
    LINK            shift and go to state 56
    TH              shift and go to state 57
    TD              shift and go to state 58
    TR              shift and go to state 59
    CAPTION         shift and go to state 60
    LI              shift and go to state 61

    style                          shift and go to state 4
    selectors                      shift and go to state 5
    selector                       shift and go to state 6
    selector_universal             shift and go to state 7
    selector_type                  shift and go to state 8
    selector_attribute             shift and go to state 9
    selector_class                 shift and go to state 10
    selector_id                    shift and go to state 11
    type                           shift and go to state 13
    html                           shift and go to state 17
    body                           shift and go to state 18
    head                           shift and go to state 19
    section                        shift and go to state 20
    aside                          shift and go to state 21
    article                        shift and go to state 22
    nav                            shift and go to state 23
    ul                             shift and go to state 24
    ol                             shift and go to state 25
    footer                         shift and go to state 26
    header                         shift and go to state 27
    table                          shift and go to state 28
    p                              shift and go to state 29
    h                              shift and go to state 30
    img                            shift and go to state 31
    a                              shift and go to state 32
    link                           shift and go to state 34
    th                             shift and go to state 35
    td                             shift and go to state 36
    tr                             shift and go to state 37
    caption                        shift and go to state 38
    li                             shift and go to state 39

state 3

    (2) styles -> empty .

    ASTERISK        reduce using rule 2 (styles -> empty .)
    CURLY_INITIAL   reduce using rule 2 (styles -> empty .)
    POINT_TEXT      reduce using rule 2 (styles -> empty .)
    HASHTAG_TEXT    reduce using rule 2 (styles -> empty .)
    TITLE           reduce using rule 2 (styles -> empty .)
    HTML            reduce using rule 2 (styles -> empty .)
    BODY            reduce using rule 2 (styles -> empty .)
    HEAD            reduce using rule 2 (styles -> empty .)
    SECTION         reduce using rule 2 (styles -> empty .)
    ASIDE           reduce using rule 2 (styles -> empty .)
    ARTICLE         reduce using rule 2 (styles -> empty .)
    NAV             reduce using rule 2 (styles -> empty .)
    UL              reduce using rule 2 (styles -> empty .)
    OL              reduce using rule 2 (styles -> empty .)
    FOOTER          reduce using rule 2 (styles -> empty .)
    HEADER          reduce using rule 2 (styles -> empty .)
    TABLE           reduce using rule 2 (styles -> empty .)
    P               reduce using rule 2 (styles -> empty .)
    H               reduce using rule 2 (styles -> empty .)
    IMG             reduce using rule 2 (styles -> empty .)
    A               reduce using rule 2 (styles -> empty .)
    LINK            reduce using rule 2 (styles -> empty .)
    TH              reduce using rule 2 (styles -> empty .)
    TD              reduce using rule 2 (styles -> empty .)
    TR              reduce using rule 2 (styles -> empty .)
    CAPTION         reduce using rule 2 (styles -> empty .)
    LI              reduce using rule 2 (styles -> empty .)
    $end            reduce using rule 2 (styles -> empty .)


state 4

    (3) styles -> styles style .

    ASTERISK        reduce using rule 3 (styles -> styles style .)
    CURLY_INITIAL   reduce using rule 3 (styles -> styles style .)
    POINT_TEXT      reduce using rule 3 (styles -> styles style .)
    HASHTAG_TEXT    reduce using rule 3 (styles -> styles style .)
    TITLE           reduce using rule 3 (styles -> styles style .)
    HTML            reduce using rule 3 (styles -> styles style .)
    BODY            reduce using rule 3 (styles -> styles style .)
    HEAD            reduce using rule 3 (styles -> styles style .)
    SECTION         reduce using rule 3 (styles -> styles style .)
    ASIDE           reduce using rule 3 (styles -> styles style .)
    ARTICLE         reduce using rule 3 (styles -> styles style .)
    NAV             reduce using rule 3 (styles -> styles style .)
    UL              reduce using rule 3 (styles -> styles style .)
    OL              reduce using rule 3 (styles -> styles style .)
    FOOTER          reduce using rule 3 (styles -> styles style .)
    HEADER          reduce using rule 3 (styles -> styles style .)
    TABLE           reduce using rule 3 (styles -> styles style .)
    P               reduce using rule 3 (styles -> styles style .)
    H               reduce using rule 3 (styles -> styles style .)
    IMG             reduce using rule 3 (styles -> styles style .)
    A               reduce using rule 3 (styles -> styles style .)
    LINK            reduce using rule 3 (styles -> styles style .)
    TH              reduce using rule 3 (styles -> styles style .)
    TD              reduce using rule 3 (styles -> styles style .)
    TR              reduce using rule 3 (styles -> styles style .)
    CAPTION         reduce using rule 3 (styles -> styles style .)
    LI              reduce using rule 3 (styles -> styles style .)
    $end            reduce using rule 3 (styles -> styles style .)


state 5

    (4) style -> selectors . BRACKET_INITIAL rules BRACKET_FINISH
    (18) selectors -> selectors . COMA selector

    BRACKET_INITIAL shift and go to state 62
    COMA            shift and go to state 63


state 6

    (17) selectors -> selector .

    BRACKET_INITIAL reduce using rule 17 (selectors -> selector .)
    COMA            reduce using rule 17 (selectors -> selector .)


state 7

    (19) selector -> selector_universal .

    BRACKET_INITIAL reduce using rule 19 (selector -> selector_universal .)
    COMA            reduce using rule 19 (selector -> selector_universal .)


state 8

    (20) selector -> selector_type .

    BRACKET_INITIAL reduce using rule 20 (selector -> selector_type .)
    COMA            reduce using rule 20 (selector -> selector_type .)


state 9

    (21) selector -> selector_attribute .

    BRACKET_INITIAL reduce using rule 21 (selector -> selector_attribute .)
    COMA            reduce using rule 21 (selector -> selector_attribute .)


state 10

    (22) selector -> selector_class .

    BRACKET_INITIAL reduce using rule 22 (selector -> selector_class .)
    COMA            reduce using rule 22 (selector -> selector_class .)


state 11

    (23) selector -> selector_id .

    BRACKET_INITIAL reduce using rule 23 (selector -> selector_id .)
    COMA            reduce using rule 23 (selector -> selector_id .)


state 12

    (24) selector_universal -> ASTERISK .

    BRACKET_INITIAL reduce using rule 24 (selector_universal -> ASTERISK .)
    COMA            reduce using rule 24 (selector_universal -> ASTERISK .)


state 13

    (25) selector_type -> type .
    (26) selector_type -> type . GREATER_THAN type
    (29) selector_attribute -> type . CURLY_INITIAL attribute CURLY_FINISH
    (30) selector_attribute -> type . CURLY_INITIAL attribute EQUAL_TEXT CURLY_FINISH
    (32) selector_class -> type . POINT_TEXT

    BRACKET_INITIAL reduce using rule 25 (selector_type -> type .)
    COMA            reduce using rule 25 (selector_type -> type .)
    GREATER_THAN    shift and go to state 64
    CURLY_INITIAL   shift and go to state 65
    POINT_TEXT      shift and go to state 66


state 14

    (27) selector_attribute -> CURLY_INITIAL . attribute CURLY_FINISH
    (28) selector_attribute -> CURLY_INITIAL . attribute EQUAL_TEXT CURLY_FINISH
    (90) attribute -> . id
    (91) attribute -> . class
    (92) attribute -> . href
    (93) attribute -> . src
    (94) attribute -> . TITLE
    (95) attribute -> . lang
    (39) id -> . ID
    (40) class -> . CLASS
    (41) href -> . HREF
    (42) src -> . SRC
    (43) lang -> . LANG

    TITLE           shift and go to state 72
    ID              shift and go to state 74
    CLASS           shift and go to state 75
    HREF            shift and go to state 76
    SRC             shift and go to state 77
    LANG            shift and go to state 78

    attribute                      shift and go to state 67
    id                             shift and go to state 68
    class                          shift and go to state 69
    href                           shift and go to state 70
    src                            shift and go to state 71
    lang                           shift and go to state 73

state 15

    (31) selector_class -> POINT_TEXT .

    BRACKET_INITIAL reduce using rule 31 (selector_class -> POINT_TEXT .)
    COMA            reduce using rule 31 (selector_class -> POINT_TEXT .)


state 16

    (33) selector_id -> HASHTAG_TEXT .

    BRACKET_INITIAL reduce using rule 33 (selector_id -> HASHTAG_TEXT .)
    COMA            reduce using rule 33 (selector_id -> HASHTAG_TEXT .)


state 17

    (67) type -> html .

    GREATER_THAN    reduce using rule 67 (type -> html .)
    CURLY_INITIAL   reduce using rule 67 (type -> html .)
    POINT_TEXT      reduce using rule 67 (type -> html .)
    BRACKET_INITIAL reduce using rule 67 (type -> html .)
    COMA            reduce using rule 67 (type -> html .)


state 18

    (68) type -> body .

    GREATER_THAN    reduce using rule 68 (type -> body .)
    CURLY_INITIAL   reduce using rule 68 (type -> body .)
    POINT_TEXT      reduce using rule 68 (type -> body .)
    BRACKET_INITIAL reduce using rule 68 (type -> body .)
    COMA            reduce using rule 68 (type -> body .)


state 19

    (69) type -> head .

    GREATER_THAN    reduce using rule 69 (type -> head .)
    CURLY_INITIAL   reduce using rule 69 (type -> head .)
    POINT_TEXT      reduce using rule 69 (type -> head .)
    BRACKET_INITIAL reduce using rule 69 (type -> head .)
    COMA            reduce using rule 69 (type -> head .)


state 20

    (70) type -> section .

    GREATER_THAN    reduce using rule 70 (type -> section .)
    CURLY_INITIAL   reduce using rule 70 (type -> section .)
    POINT_TEXT      reduce using rule 70 (type -> section .)
    BRACKET_INITIAL reduce using rule 70 (type -> section .)
    COMA            reduce using rule 70 (type -> section .)


state 21

    (71) type -> aside .

    GREATER_THAN    reduce using rule 71 (type -> aside .)
    CURLY_INITIAL   reduce using rule 71 (type -> aside .)
    POINT_TEXT      reduce using rule 71 (type -> aside .)
    BRACKET_INITIAL reduce using rule 71 (type -> aside .)
    COMA            reduce using rule 71 (type -> aside .)


state 22

    (72) type -> article .

    GREATER_THAN    reduce using rule 72 (type -> article .)
    CURLY_INITIAL   reduce using rule 72 (type -> article .)
    POINT_TEXT      reduce using rule 72 (type -> article .)
    BRACKET_INITIAL reduce using rule 72 (type -> article .)
    COMA            reduce using rule 72 (type -> article .)


state 23

    (73) type -> nav .

    GREATER_THAN    reduce using rule 73 (type -> nav .)
    CURLY_INITIAL   reduce using rule 73 (type -> nav .)
    POINT_TEXT      reduce using rule 73 (type -> nav .)
    BRACKET_INITIAL reduce using rule 73 (type -> nav .)
    COMA            reduce using rule 73 (type -> nav .)


state 24

    (74) type -> ul .

    GREATER_THAN    reduce using rule 74 (type -> ul .)
    CURLY_INITIAL   reduce using rule 74 (type -> ul .)
    POINT_TEXT      reduce using rule 74 (type -> ul .)
    BRACKET_INITIAL reduce using rule 74 (type -> ul .)
    COMA            reduce using rule 74 (type -> ul .)


state 25

    (75) type -> ol .

    GREATER_THAN    reduce using rule 75 (type -> ol .)
    CURLY_INITIAL   reduce using rule 75 (type -> ol .)
    POINT_TEXT      reduce using rule 75 (type -> ol .)
    BRACKET_INITIAL reduce using rule 75 (type -> ol .)
    COMA            reduce using rule 75 (type -> ol .)


state 26

    (76) type -> footer .

    GREATER_THAN    reduce using rule 76 (type -> footer .)
    CURLY_INITIAL   reduce using rule 76 (type -> footer .)
    POINT_TEXT      reduce using rule 76 (type -> footer .)
    BRACKET_INITIAL reduce using rule 76 (type -> footer .)
    COMA            reduce using rule 76 (type -> footer .)


state 27

    (77) type -> header .

    GREATER_THAN    reduce using rule 77 (type -> header .)
    CURLY_INITIAL   reduce using rule 77 (type -> header .)
    POINT_TEXT      reduce using rule 77 (type -> header .)
    BRACKET_INITIAL reduce using rule 77 (type -> header .)
    COMA            reduce using rule 77 (type -> header .)


state 28

    (78) type -> table .

    GREATER_THAN    reduce using rule 78 (type -> table .)
    CURLY_INITIAL   reduce using rule 78 (type -> table .)
    POINT_TEXT      reduce using rule 78 (type -> table .)
    BRACKET_INITIAL reduce using rule 78 (type -> table .)
    COMA            reduce using rule 78 (type -> table .)


state 29

    (79) type -> p .

    GREATER_THAN    reduce using rule 79 (type -> p .)
    CURLY_INITIAL   reduce using rule 79 (type -> p .)
    POINT_TEXT      reduce using rule 79 (type -> p .)
    BRACKET_INITIAL reduce using rule 79 (type -> p .)
    COMA            reduce using rule 79 (type -> p .)


state 30

    (80) type -> h .

    GREATER_THAN    reduce using rule 80 (type -> h .)
    CURLY_INITIAL   reduce using rule 80 (type -> h .)
    POINT_TEXT      reduce using rule 80 (type -> h .)
    BRACKET_INITIAL reduce using rule 80 (type -> h .)
    COMA            reduce using rule 80 (type -> h .)


state 31

    (81) type -> img .

    GREATER_THAN    reduce using rule 81 (type -> img .)
    CURLY_INITIAL   reduce using rule 81 (type -> img .)
    POINT_TEXT      reduce using rule 81 (type -> img .)
    BRACKET_INITIAL reduce using rule 81 (type -> img .)
    COMA            reduce using rule 81 (type -> img .)


state 32

    (82) type -> a .

    GREATER_THAN    reduce using rule 82 (type -> a .)
    CURLY_INITIAL   reduce using rule 82 (type -> a .)
    POINT_TEXT      reduce using rule 82 (type -> a .)
    BRACKET_INITIAL reduce using rule 82 (type -> a .)
    COMA            reduce using rule 82 (type -> a .)


state 33

    (83) type -> TITLE .

    GREATER_THAN    reduce using rule 83 (type -> TITLE .)
    CURLY_INITIAL   reduce using rule 83 (type -> TITLE .)
    POINT_TEXT      reduce using rule 83 (type -> TITLE .)
    BRACKET_INITIAL reduce using rule 83 (type -> TITLE .)
    COMA            reduce using rule 83 (type -> TITLE .)


state 34

    (84) type -> link .
